--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
+  "homepage": "https://AmenKaabachi.github.io/analytics",
   "name": "analytics-dashboard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "bootstrap": "^5.3.3",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.1",
-    "react-router-dom": "^6.22.1",
-    "react-icons": "^5.0.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
@@ -25,6 +28,7 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
+    "gh-pages": "^6.3.0",
     "vite": "^5.4.2"
   }
 }
