--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
