--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.12.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.1",
     "react-copy-to-clipboard": "^5.1.0",
