--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "homepage": "https://AmenKaabachi.github.io/user-analytics",
-  "name": "analytics-dashboard",
-  "private": true,
+  "name": "analytics",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
