--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/plugin-syntax-flow": "^7.26.0",
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "chance": "^1.1.12",
     "cors": "^2.8.5",
+    "d3": "^7.9.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
@@ -24,19 +30,25 @@
     "react-bootstrap": "^2.10.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
+    "react-error-overlay": "^6.0.11",
+    "react-google-charts": "^5.2.1",
     "react-icons": "^5.0.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^7.1.1",
+    "sass": "^1.83.4",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "concurrently": "^9.1.2",
     "eslint": "^9.9.1",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "gh-pages": "^6.3.0",
+    "nodemon": "^3.1.9",
     "vite": "^5.4.2"
   }
 }
